--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
-  "keywords": [],
+  "keywords": [
+    "git",
+    "cli",
+    "conventional-commits",
+    "i18n"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "CLI to facilitate Git usage with natural language",
   "dependencies": {
     "@types/node": "^22.13.9",
     "commander": "^13.1.0",
