--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   "license": "MIT",
   "description": "CLI to facilitate Git usage with natural language",
   "dependencies": {
-    "@types/node": "^22.13.9",
-    "commander": "^13.1.0",
-    "inquirer": "^12.4.2",
-    "simple-git": "^3.27.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "commander": "^8.3.0",
+    "inquirer": "^7.3.3",
+    "simple-git": "^2.48.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
+    "@types/node": "^14.18.63",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "typescript": "^4.9.5"
   },
   "bin": {
     "gitqq": "dist/index.js"
